--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <ul class="menu">
           <li class="menu-text"><a href="#Article1">Home</a></li>
           <li class="menu-text"><a href="#Article2">About Us</a></li>
-          <li><img src="img\maxmilian-logo.png" alt="Maxmilian Negozio Logo" class="logo"></li>
+          <li><img src="maxmilian-logo.png" alt="Maxmilian Negozio Logo" class="logo"></li>
           <li class="menu-text"><a href="#Article3">Wine</a></li>
           <li class="menu-text"><a href="#Article4">Contact Us</a></li>
-          <li class="menu-text" class="search-icon"><img src="img\search-icon.png" alt="search-icon"></li>
+          <li class="menu-text" class="search-icon"><img src="search-icon.png" alt="search-icon"></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,7 @@
           <div class="row"> 
 
               <div class="column">
-                <img src="img/body-imagehead.jpg" style="width: 100%; height: 100%">
+                <img src="body-imagehead.jpg" style="width: 100%; height: 100%">
                 <div class="centered" ><h1 class="h1" >Every Taste is a choice.<br>Be unique.</h1></div>
               </div>
 
@@ -61,22 +61,22 @@
       <article id="Article3">      
         <div class="row"> 
           <div class="column">
-            <img src="img/body-image1.jpg" class="body-image">
+            <img src="body-image1.jpg" class="body-image">
             <div class="centered">Red Wine</div>
           </div>
           <div class="column">
-            <img src="img/body-image2.jpg" class="body-image">
+            <img src="body-image2.jpg" class="body-image">
             <div class="centered">White Wine</div>
           </div> 
           <div class="column">
-            <img src="img/body-image3.jpg" class="body-image">
+            <img src="body-image3.jpg" class="body-image">
             <div class="centered">Ingredients</div>
           </div>
         </div>
 
         <div class="row"> 
           <div class="column">
-            <img src="img/body-image4.jpg" class="body-image">
+            <img src="body-image4.jpg" class="body-image">
             <div class="top-left">Wine Collection</div>
           </div>
         </article>
