--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/max.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="max.css">
 
     <!-- To make page responsive -->
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
-    <script src="js/max.js"></script>
+    <script src="max.js"></script>
 
     <header class="header-body" id="#Article1">
       
